--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -21,5 +21,5 @@ jobs:
 
       - name: Build and test
         run: |
-          docker-compose build
-          docker-compose run test
+          docker compose build
+          docker compose run test
